<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">Sunshine</string>
    <string name="action_settings">Settings</string>

    <!-- SyncAdapter related -->
    <string name="sync_account_type">sunshine.relferreira.com</string>
    <string name="content_authority">com.relferreira.sunshine</string>

    <string name="list_item_text">Today - Sunny - 88/63</string>
    <string name="menu_refresh" translatable="false">Refresh</string>
    <string name="menu_map">Map</string>
    <string name="menu_share">Share</string>
    <string name="title_activity_detail">Detail</string>
    <string name="title_activity_settings">Settings</string>
    <string name="map_not_availabe">Device does not support maps</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="empy_list">No Weather Information Available!</string>
    <string name="empty_list_internet">No Weather Information Available! \nThe network is not available to fetch the weather data</string>
    <string name="empty_forecast_list_server_down">No weather information available. \nThe server is not returning data.</string>
    <string name="empty_forecast_list_server_error">No weather information available. \nThe server is not returning valid data. Please check for an updated version of Sunshine.</string>
    <string name="empty_forecast_list_invalid_location">No weather information available. \nThe location in settings is not recognized by the weather server.</string>
    <string name="format_full_friendly_date"><xliff:g id="day">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g></string>
    <string name="formated_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00b0</string>
    <!-- Windspeed formats -->
    <!-- Wind in mph [CHAR LIMIT=25] -->
    <string name="format_wind_mph"><xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g></string>

        <!-- Wind in kph [CHAR LIMIT=25] -->
    <string name="format_wind_kmh"><xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g>
    </string>

    <!-- Pressure format CHAR LIMIT=25] -->
    <string name="format_pressure"><xliff:g id="pressure">%1.0f</xliff:g> hPa</string>

    <!-- Humidity format CHAR LIMIT=25]-->
    <string name="format_humidity"><xliff:g id="humidity">%1.0f</xliff:g> %%</string>


    <!--Preferences-->
    <string name="pref_location_key" translatable="false">location</string>
    <string name="pref_location_label">Location</string>
    <string name="pref_location_default" translatable="false">94043,USA</string>
    <string name="pref_location_status_key">location_status_key</string>
    <string name="pref_location_error_description">Invalid Location (<xliff:g id="location_setting">%1$s</xliff:g>)"</string>
    <string name="pref_location_unknown_description">Validating Location… (<xliff:g id="location_setting">%1$s</xliff:g>)"</string>
    <string name="pref_location_error_server">Error communicating with server</string>
    <string name="pref_unit_key" translatable="false">unit</string>
    <string name="pref_unit_label">Temperatura Units</string>
    <string name="pref_unit_default" translatable="false">metric</string>
    <string name="pref_unit_metric" translatable="false">metric</string>
    <string name="pref_unit_imperial" translatable="false">imperial</string>

    <string name="pref_theme_label">Theme</string>
    <string name="pref_theme_key" translatable="false">theme</string>
    <string name="pref_theme_default" translatable="false">default</string>

    <string name="list_item_forecast_icon_des">forecast icon</string>

    <!-- Notification Format -->
    <string name="format_notification">Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g></string>
    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification">last_notification</string>
    <string name="notification_title">New Weather</string>
    <string name="notification_alert_title">New Weather Alert</string>

    <!-- Strings related to Notification Enabled preference -->
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Weather Notifications</string>
    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>

    <string name="a11y_low_temp">Low: <xliff:g id="low">%1$s</xliff:g></string>
    <string name="a11y_high_temp">High: <xliff:g id="high">%1$s</xliff:g></string>
    <string name="a11y_forecast_icon">Forecast icon: <xliff:g id="condition">%1$s</xliff:g></string>
    <string name="a11y_forecast">Forecast: <xliff:g id="condition">%1$s</xliff:g></string>


    <string name="format_art_url" translatable="false">https://raw.githubusercontent.com/udacity/Sunshine-Version-2/sunshine_master/app/src/main/res/drawable-xxhdpi/art_<xliff:g id="description">%s</xliff:g>.png</string>
    <string name="format_art_url_colored" translatable="false">https://raw.githubusercontent.com/udacity/sunshine_icons/master/Archive/Colored/art_<xliff:g id="description">%s</xliff:g>.png</string>
    <string name="format_art_url_mono" translatable="false">https://raw.githubusercontent.com/udacity/sunshine_icons/master/Archive/Mono/art_<xliff:g id="description">%s</xliff:g>.png</string>

    <string name="gcm_weather_alert">Heads up: %1$s in %2$s!</string>
    <string name="humidity_title">Humidity</string>

    <string name="image_transition" translatable="false">image_transition</string>
    <string name="pref_current_location">select current location</string>

    <string name="pref_location_latitude" translatable="false">loc-latitude</string>
    <string name="pref_location_longitude" translatable="false">loc-longitude</string>

    <string name="attribution_text">Powered by Google</string>

    <string name="title_widget_today">Sunshine Today</string>
    <string name="title_widget_detail">Sunshine Details</string>

    <string name="muzei_description">Today\'s weather</string>
</resources>
